# chlorophyll

./: .gitignore  DEVELOPMENT_PLAN.md  README.md  docker-compose.yml
backend/: README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 07f95c4dc184_add_plant_taxonomy_fields_type_.py  bb73a9271aad_initial_migration_create_all_tables.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: __init__.py  fiscal.py  logistics.py  phenology.py  plant.py  properties.py  system.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  living_asset.py  operations.py  plant.py  property.py  weather.py  work_order.py
backend/app/schemas/: fiscal.py  living_asset.py  logistics.py  phenology.py  plant.py  properties.py  system.py
backend/app/services/: fiscal.py  logistics.py  phenology.py  plant.py  properties.py
backend/app/tasks/: celery_app.py  phenology.py
backend/scripts/: seed_data.py
backend/tests/: __init__.py  conftest.py  test_phenology.py  test_properties.py  test_system.py
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/: config.ts
frontend/app/plants/: page.tsx
frontend/app/plants/[id]/: page.tsx
frontend/app/plants/new/: page.tsx
frontend/app/properties/: page.tsx
frontend/app/properties/[id]/: page.tsx
frontend/app/properties/new/: page.tsx
frontend/app/types/: plant.ts  property.ts
