[project]
name = "chlorophyll-backend"
version = "0.1.0"
description = "Chlorophyll backend - horticultural ERP (FastAPI, SQLAlchemy, Postgres, Celery)"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Chlorophyll", email = "dev@chlorophyll.local" }
]
dependencies = [
  "fastapi[all]>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "psycopg[binary]>=3.2.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.9",
  "celery[redis]>=5.4.0",
  "redis>=5.0.0",
  "httpx>=0.27.0",
  "python-dateutil>=2.9.0",
  "geojson>=3.1.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "mypy>=1.10.0",
  "types-python-dateutil",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"


